# hackathon-2-phase-2

./: .gitignore  PROJECT_SUMMARY.md  README.md
.claude/: settings.local.json
.claude/agents/: nextjs-ui-architect.md  python-backend-auditor.md
.specify/memory/: constitution.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: config.py
backend/src/api/: __init__.py  auth.py  tasks.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  task.py
backend/src/schemas/: task.py
backend/src/services/: __init__.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_main.py
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: __init__.py  config.py  database.py  main.py
frontend/src/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthWrapper.tsx  ConfirmationModal.tsx  FilterControls.tsx  Navbar.tsx  SearchBar.tsx  Sidebar.tsx  TaskFilters.tsx  TaskItem.tsx  TaskList.tsx  TaskStats.tsx  ThemeToggle.tsx  VoiceInput.tsx
frontend/src/context/: AuthProvider.tsx  ThemeContext.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts  useTaskFilters.ts  useVoiceRecognition.ts
frontend/src/lib/: api-client.ts  api.ts  auth.ts  utils.ts  voiceRecognition.ts
frontend/src/models/: user.py
frontend/src/schemas/: __init__.py
frontend/src/services/: authService.ts  (+2 more)
specs/001-multi-user-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-dashboard-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+25 files in other folders)
